--- a/cart.html
+++ b/cart.html
@@ -1,39 +1,95 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>سلة التسوق</title>
-    <link rel="stylesheet" href="style_cart.css">
+    <title>Shopping Cart</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        .cart-container {
+            max-width: 400px;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        ul {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 10px;
+            border-bottom: 1px solid #ddd;
+        }
+        .delete-btn {
+            background: red;
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        .delete-btn:hover {
+            background: darkred;
+        }
+        #checkout {
+            width: 100%;
+            padding: 10px;
+            background: green;
+            color: white;
+            border: none;
+            cursor: pointer;
+            border-radius: 4px;
+            margin-top: 10px;
+        }
+        #checkout:hover {
+            background: darkgreen;
+        }
+    </style>
 </head>
 <body>
-    <div class="cart-container">
-        <h1>سلة التسوق</h1>
-        <table id="cart-table">
-            <thead>
-                <tr>
-                    <th>المنتج</th>
-                    <th>السعر</th>
-                    <th>الكمية</th>
-                    <th>الإجمالي</th>
-                    <th>إجراءات</th>
-                </tr>
-            </thead>
-            <tbody id="cart-body">
-                <!-- المنتجات ستضاف هنا باستخدام JavaScript -->
-            </tbody>
-        </table>
-        <div class="total">
-            <span>الإجمالي: </span><span id="total-price">0</span> ريال
-        </div>
-        <button id="checkout-btn">إتمام الشراء</button>
+    <section class="cart-container">
+        <h2>Shopping Cart</h2>
+        <ul id="cart-list"></ul>
+        <p><strong>Total:</strong> <span id="total-price">0</span> TUB</p>
+        <button id="checkout">Checkout</button>
+    </section>
 
-        <!-- إضافة رابط للعودة إلى الصفحة الأولى -->
-        <div class="go-back">
-            <a href="Home.html">العودة إلى الصفحة الرئيسية</a>
-        </div>
-    </div>
+    <script>
+        let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-    <script src="cart.js"></script>
+        function updateCart() {
+            let cartList = document.getElementById('cart-list');
+            let totalPrice = document.getElementById('total-price');
+            cartList.innerHTML = '';
+            let total = 0;
+
+            cart.forEach((item, index) => {
+                let li = document.createElement('li');
+                li.innerHTML = `${item.name} - ${item.price} TUB 
+                                <button class="delete-btn" onclick="removeFromCart(${index})">X</button>`;
+                cartList.appendChild(li);
+                total += parseFloat(item.price);
+            });
+
+            totalPrice.textContent = total.toFixed(2); // عرض المجموع مع منزلتين عشريتين
+            localStorage.setItem('cart', JSON.stringify(cart)); // تحديث localStorage
+        }
+
+        function removeFromCart(index) {
+            cart.splice(index, 1); // حذف العنصر من المصفوفة
+            updateCart(); // تحديث السلة
+        }
+
+        updateCart();
+    </script>
 </body>
 </html>
