--- a/Home.html
+++ b/Home.html
@@ -362,32 +362,35 @@ function goToCart() {
     </section>
 
   <!--------------------------- 10 page ------------------------------------>
-    <section id="bear">
-      <div class="product-section" data-name="bear" data-price="120.4"  >
+  <section id="bear">
+    <div class="product-section" data-name="bear" data-price="120.4">
         <div class="image-container-dragon">
-              <img src="images/bear.jpg" alt="bear" id="product-image">
-          </div>
-          <div class="text-container-dragon">
-              <h2 id="product-name">bear</h2>
-              <p>Handmade Crochet Cat Pet Medallion</p>
-              <p class="price" id="product-price">120.4 TUB</p>
-              <div class="rating">
-                  <span>⭐⭐⭐⭐⭐</span>
-              </div>
-              <div class="quantity-dragon">
-                  <button id="decrease-quantity">-</button>
-                  <span id="product-quantity">1</span>
-                  <button id="increase-quantity">+</button>
-              </div>
-              <h3>Order Summary</h3>
-              <p>Product price: <span id="order-price">120.4 TUB</span></p>
-              <p>Delivery price: 10.1 TUB</p>
-              <p>Total price: <span id="total-price">130.5 TUB</span></p>
-              <button class="add-to-cart">Add to Cart</button>
-          </div>
-      </div>
-    </section>
+            <img src="images/bear.jpg" alt="bear" id="product-image">
+        </div>
+        <div class="text-container-dragon">
+            <h2 id="product-name">bear</h2>
+            <p>Handmade Crochet Cat Pet Medallion</p>
+            <p class="price" id="product-price">120.4 TUB</p>
+            <div class="rating">
+                <span>⭐⭐⭐⭐⭐</span>
+            </div>
+            <div class="quantity-dragon">
+                <button id="decrease-quantity">-</button>
+                <span id="product-quantity">1</span>
+                <button id="increase-quantity">+</button>
+            </div>
+            <h3>Order Summary</h3>
+            <p>Product price: <span id="order-price">120.4 TUB</span></p>
+            <p>Delivery price: 10.1 TUB</p>
+            <p>Total price: <span id="total-price">130.5 TUB</span></p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+    </div>
+</section>
 
+<script>
+
+</script>
   <!--------------------------- 11 page ------------------------------------>
 
 
