--- a/Home.html
+++ b/Home.html
@@ -37,14 +37,14 @@
       <button type="button" id="searchBtn">🔍</button>
     </div>
   
+  
    <!-- القائمة المخفية في الجانب الأيمن -->
 <div class="sidebar" id="sidebar">
   <ul>
-    <li><a href="#home">Home</a></li>
-    <li><a href="#cart">سلة التسوق</a></li>
-    <li><a href="#shop">تسوق</a></li>
-    <li><a href="https://www.instagram.com" target="_blank">
-      <img src="images/instagram-icon.png" alt="Instagram" class="social-icon">
+    <li><a href="#free_pattren">Free Pattern</a></li> <!-- تغيير الرابط هنا -->
+    <li><a href="#reviews">Reviews</a></li>
+    <li><a href="#about-me">About me</a></li>
+    <li><a href="#contact">Contact</a></li>
     </a></li>
     <li><a href="https://www.tiktok.com" target="_blank">
       <img src="images/tiktok-icon.png" alt="TikTok" class="social-icon">
@@ -176,12 +176,12 @@ function goToCart() {
 
 
 <section id="cat-claw-gloves">
-  <div class="product-section" data-name="Cat Medal" data-price="200" deliveryPrice = 10.1>
+  <div class="product-section" data-name="cat claw gloves" data-price="200" deliveryPrice = 10.1>
       <div class="image-container-dragon">
         <img src="images/cat-claw-gloves.jpg" alt="Cat Medal">
       </div>
       <div class="text-container-dragon">
-          <h2 id="product-name">Cat Medal</h2>
+          <h2 id="product-name">cat claw gloves</h2>
           <p>Handmade Crochet Cat Pet Medallion</p>
           <p class="price" id="product-price">200 TUB</p>
           <div class="rating">
@@ -247,12 +247,12 @@ function goToCart() {
 
 
     <section id="cats-halloween-designs">
-      <div class="product-section" data-name="stitch" data-price="80"  >
+      <div class="product-section" data-name="cats halloween" data-price="80"  >
         <div class="image-container-dragon">
               <img src="images/cats-halloween-designs.jpg" alt="Cat Medal" id="product-image">
           </div>
           <div class="text-container-dragon">
-              <h2 id="product-name">Cat Medal</h2>
+              <h2 id="product-name">cats halloween</h2>
               <p>Handmade Crochet Cat Pet Medallion</p>
               <p class="price" id="product-price">55 TUB</p>
               <div class="rating">
@@ -276,12 +276,12 @@ function goToCart() {
   <!---------------------------sevenpage ------------------------------------>
 
     <section id="cat-family.">
-      <div class="product-section" data-name="stitch" data-price="80"  >
+      <div class="product-section" data-name="cat family" data-price="80"  >
         <div class="image-container-dragon">
               <img src="images/cat-family.jpg" alt="Cat Medal" id="product-image">
           </div>
           <div class="text-container-dragon">
-              <h2 id="product-name">Cat Medal</h2>
+              <h2 id="product-name">cat family</h2>
               <p>Handmade Crochet Cat Pet Medallion</p>
               <p class="price" id="product-price">60 TUB</p>
               <div class="rating">
@@ -304,7 +304,7 @@ function goToCart() {
   <!---------------------------8 page ------------------------------------>
 
     <section id="dragon">
-      <div class="product-section" data-name="stitch" data-price="80"  >
+      <div class="product-section" data-name="dragon" data-price="80"  >
         <div class="image-container-dragon">
               <img src="images/dragon.jpg" alt="Cat Medal" id="product-image">
           </div>
@@ -336,7 +336,7 @@ function goToCart() {
 
 
     <section id="monkey">
-      <div class="product-section" data-name="stitch" data-price="80"  >
+      <div class="product-section" data-name="monkey" data-price="80"  >
         <div class="image-container-dragon">
               <img src="images/monkey.jpg" alt="Cat Medal" id="product-image">
           </div>
