--- a/Home.html
+++ b/Home.html
@@ -460,7 +460,7 @@ function goToCart() {
 
   <!---------------------------13 page ------------------------------------>
 
-  <p id="visitor-count">عدد الزوار: 0</p>
+  <p id="visitor-count">Number of visitors: 0: 0</p>
 
 
   <footer>
